<resources>
    <string name="app_name" translatable="false">PlainContainers</string>
    <string name="appbar_title_overview">Container Overview</string>
    <string name="appbar_title_details">Container Details</string>
    <string name="appbar_title_add_container">New Container</string>
    <string name="appbar_title_add_item">New Item</string>
    <string name="appbar_title_edit_container">Container Info</string>
    <string name="appbar_title_edit_item">Item Info</string>
    <string name="appbar_title_capture">Capture Photo</string>
    <string name="appbar_title_settings">Settings</string>
    <string name="appbar_item_settings">Settings</string>
    <string name="appbar_item_about">About</string>

    <string name="general_component_drag_sort">Drag Sorting</string>
    <string name="general_btn_ok">OK</string>
    <string name="count_component_amount" translatable="false">%dx</string>

    <string name="overview_btn_add">Add Container</string>
    <string name="details_btn_add">Add Item</string>
    <string name="details_btn_edit">Edit Container</string>
    <string name="details_popup_add_title">Select method to add item</string>
    <string name="details_popup_add_btn_manual">Manual</string>
    <string name="details_popup_add_btn_barcode">Barcode</string>

    <string name="metadata_tv_name">Name:</string>
    <string name="metadata_tv_photo">Photo:</string>
    <string name="metadata_tv_description">Description:</string>
    <string name="metadata_tv_color">Color:</string>
    <string name="metadata_btn_apply">Apply</string>
    <string name="metadata_btn_delete">Delete</string>
    <string name="metadata_popup_photo_title">Select method to add photo</string>
    <string name="metadata_popup_photo_btn_capture">Camera</string>
    <string name="metadata_popup_photo_btn_gallery">Gallery</string>
    <string name="metadata_popup_delete_title_container">Really delete this container, including its items?</string>
    <string name="metadata_popup_delete_title_item">Really delete this item from its container?</string>
    <string name="metadata_popup_delete_subtitle">This action is irreversible!</string>
    <string name="metadata_popup_delete_cancel">Cancel</string>
    <string name="metadata_popup_delete_confirm">Delete!</string>
    <string name="metadata_colorpicker_title">Container Color</string>

    <string name="popup_warning_camera_permission_denied">Need camera permission in order to capture photos.</string>
    <string name="popup_warning_barcode_metadata_fail">Could not get data for this barcode.</string>
    <string name="popup_warning_metadata_name_empty">Name cannot be empty.</string>

    <string name="popup_sort_title">Sort by:</string>
    <string name="popup_sort_entry_name">Name</string>
    <string name="popup_sort_entry_date_added">Date (added)</string>
    <string name="popup_sort_entry_date_modified">Date (modified)</string>
    <string name="popup_sort_entry_custom">Custom</string>

    <string name="popup_choice_remember_item_zero">How to handle 0 amount for this item?</string>
    <string name="popup_choice_remember_item_zero_ignore">Ignore</string>
    <string name="popup_choice_remember_subtitle">Remember this choice</string>

    <string name="settings_general_title">General</string>
    <string name="settings_general_language">Change Language</string>
    <string name="settings_general_language_en">English</string>
    <string name="settings_general_language_de">German</string>
    <string name="settings_operations_title">Operations</string>
    <string name="settings_operations_item_count_zero">Behavior on zero item count</string>
    <string name="settings_operations_item_count_zero_ask">Ask every time</string>

    <string name="about_licenses">Licenses</string>
    <string name="about_version">Version %1$s</string>
    <string name="license_color_picker" translatable="false">ColorPickerView (skydoves)</string>
    <string name="license_flaticons">This app uses icons from the UIcons library.\nThey\'re available on Flaticon by Magnific:</string>
    <string name="license_apache">This app uses open source libraries licensed under the Apache License 2.0:</string>

    <string name="accessibility_btn_drag">Drag to reorder</string>
    <string name="accessibility_btn_expand">Unfold container</string>
    <string name="accessibility_btn_contract">Fold container</string>
    <string name="accessibility_btn_increment">Increase quantity</string>
    <string name="accessibility_btn_decrement">Decrease quantity</string>
    <string name="accessibility_btn_dismiss_popup">Cancel</string>
    <string name="accessibility_btn_camera_switch">Switch camera view</string>
    <string name="accessibility_iv_change_photo">Change photo</string>
    <string name="accessibility_iv_change_color">Change color</string>
    <string name="accessibility_icon_ascending">Ascending order</string>
    <string name="accessibility_icon_descending">Descending order</string>

    <string name="frag_arg_add_item" translatable="false">frag_arg_add_item</string>
    <string name="frag_arg_container" translatable="false">frag_arg_container</string>
    <string name="frag_arg_edit_container" translatable="false">frag_arg_edit_container</string>
    <string name="frag_arg_edit_item" translatable="false">frag_arg_edit_item</string>

    <string name="frag_result_capture_permission_request" translatable="false">frag_result_capture_permission</string>
    <string name="frag_result_capture_permission_denied" translatable="false">frag_result_capture_permission_denied</string>
    <string name="frag_result_capture_result_request" translatable="false">frag_result_capture_result</string>
    <string name="frag_result_capture_result_uri" translatable="false">frag_result_capture_result_uri</string>
    <string name="frag_result_barcode_result_request" translatable="false">frag_result_barcode_result</string>
    <string name="frag_result_barcode_result_text" translatable="false">frag_result_barcode_result_text</string>

    <string name="debug_sample_text" translatable="false">Sample Text</string>
</resources>