<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/viewPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Title.Bold"
            android:text="@string/license_color_picker"
        />

        <TextView
            android:id="@+id/tvLicensesColorPicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Default"
        />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/horizontalBarHeight"
            android:background="@color/lightgray"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Title.Bold"
            android:text="@string/license_flaticons"
        />

        <TextView
            android:id="@+id/tvLicensesFlatIcons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Default"
            android:autoLink="web"
        />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/horizontalBarHeight"
            android:background="@color/lightgray"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Title.Bold"
            android:text="@string/license_apache"
        />

        <TextView
            android:id="@+id/tvLicensesApache"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/Widget.PlainContainers.Text.Default"
        />

    </LinearLayout>

</ScrollView>