<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cornerRadiusDefault"
    app:cardBackgroundColor="@color/border"
    app:cardElevation="0dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundDefault"
        android:layout_margin="@dimen/borderThicknessMedium"
        android:padding="@dimen/viewPadding"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnSelectionBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/popupSelectionBackIconMinSize"
                android:minHeight="@dimen/popupSelectionBackIconMinSize"
                android:src="@drawable/arrow_small_left_24"
                android:contentDescription="@string/accessibility_btn_dismiss_popup"
                android:scaleType="centerCrop"
                android:background="@color/backgroundDefault"
                android:layout_centerVertical="true"
            />

            <TextView
                android:id="@+id/tvPopupSelectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debug_sample_text"
                android:textAppearance="@style/Widget.PlainContainers.Text.Title"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/btnSelectionBack"
                android:layout_marginLeft="@dimen/popupListTitleMargin"
            />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/lvPopupSelectionList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/popupListItemListMargin"
                android:divider="@color/backgroundDefault"
                android:dividerHeight="@dimen/emptyDividerHeight"
            />

            <Button
                android:id="@+id/btnSelectionOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lvPopupSelectionList"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"
                android:text="@string/general_btn_ok"
            />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>