<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cornerRadiusDefault"
    app:cardBackgroundColor="@color/border"
    app:cardElevation="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDefault"
        android:layout_margin="@dimen/borderThicknessMedium"
        android:minWidth="@dimen/popupChoiceMinWidth"
        android:minHeight="@dimen/popupChoiceMinHeight"
        android:padding="@dimen/viewPaddingSmall"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceVert1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceVert2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceVert3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceHorz1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceHorz2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePopupChoiceHorz3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"
        />

        <ImageButton
            android:id="@+id/btnPopupChoiceBack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/arrow_small_left_24"
            android:contentDescription="@string/accessibility_btn_dismiss_popup"
            android:scaleType="centerCrop"
            android:background="@color/backgroundDefault"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guidelinePopupChoiceHorz1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelinePopupChoiceVert1"
        />

        <TextView
            android:id="@+id/tvPopupChoiceTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/details_popup_add_title"
            android:textAppearance="@style/Widget.PlainContainers.Text.Title"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/guidelinePopupChoiceHorz1"
            app:layout_constraintBottom_toTopOf="@id/guidelinePopupChoiceHorz2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
            android:id="@+id/tvPopupChoiceSubtitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/details_popup_add_title"
            android:textAppearance="@style/Widget.PlainContainers.Text.Subtitle"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/guidelinePopupChoiceHorz2"
            app:layout_constraintBottom_toTopOf="@id/guidelinePopupChoiceHorz3"
            app:layout_constraintStart_toStartOf="@id/guidelinePopupChoiceVert1"
            app:layout_constraintEnd_toEndOf="@id/guidelinePopupChoiceVert3"
        />

        <Button
            android:id="@+id/btnPopupChoiceLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_outline_rounded_filled"
            android:text="@string/details_popup_add_btn_manual"
            android:textAppearance="@style/Widget.PlainContainers.Text.Button"
            android:layout_marginLeft="@dimen/btnPopupChoiceMargin"
            android:layout_marginRight="@dimen/btnPopupChoiceMargin"
            app:layout_constraintTop_toBottomOf="@id/guidelinePopupChoiceHorz3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelinePopupChoiceVert2"
        />

        <Button
            android:id="@+id/btnPopupChoiceRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_outline_rounded_filled"
            android:text="@string/details_popup_add_btn_barcode"
            android:textAppearance="@style/Widget.PlainContainers.Text.Button"
            android:layout_marginLeft="@dimen/btnPopupChoiceMargin"
            android:layout_marginRight="@dimen/btnPopupChoiceMargin"
            app:layout_constraintTop_toBottomOf="@id/guidelinePopupChoiceHorz3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelinePopupChoiceVert2"
            app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

